v2.00.00
Modified users and profiles so that additional logins can be created
for the web-console.
Modified so application private key is kept in DB instead of filesystem.
Added public SSH key management.
Added auditing of SSH sessions.
Changed to support multiple simultaneous users.
Updated project dependencies.